Removed dependency to proprietary BASE64 Encoder